Migrated from bootstrap to material ui

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,9 +1,12 @@
-.dropdown-row {
-  margin-bottom: 10px;
-  margin-top: 20px;
-  text-align: right;
+body {
+  margin: 0px;
 }
 
-.comment-actions {
-  margin-top: 20px;
+form {
+  width:50%;
+  margin: 0px auto;
+}
+
+.form-buttons {
+  text-align: center;
 }
